--- a/requirements.txt
+++ b/requirements.txt
@@ -1,34 +1,34 @@
-# FastAPI 核心框架
+# FastAPI
 fastapi==0.104.1
 uvicorn[standard]==0.24.0
 pydantic==2.5.0
 pydantic-settings==2.1.0
 
-# 数据库驱动
+# Database drivers
 neo4j==5.14.1
 pymysql==1.1.0
 sqlalchemy==2.0.23
 cryptography==41.0.7
 
-# Redis 缓存
+# Redis
 redis==5.0.1
 
-# Celery 异步任务
+# Celery
 celery==5.3.4
 flower==2.0.1
 
-# 工具库
+# Tools
 python-multipart==0.0.6
 python-jose[cryptography]==3.3.0
 passlib[bcrypt]==1.7.4
 python-dotenv==1.0.0
 httpx==0.25.2
 
-# CSV/Excel 导出
+# CSV/Excel Export
 openpyxl==3.1.2
 pandas==2.1.3
 
-# 日志和监控
+# logs
 loguru==0.7.2
 
 # CORS
